set initial state as published

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,11 @@
 Changelog
 =========
 
+1.0.1 (2011-01-14)
+------------------
+
+* set initial state "published" in groupware_workflow [andrea]
+
 1.0.0 (xxxx-xx-xx)
 ------------------
 
