--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,11 @@
 Changelog
 =========
 
+1.0.2 (2011-01-19)
+------------------
+
+* fixed workflows [andrea]
+
 1.0.1 (2011-01-14)
 ------------------
 
