--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,11 @@
 Changelog
 =========
 
+1.0.5 (2011-12-??)
+------------------
+
+* fixed permission "View" in groupware_workflow [andrea]
+
 1.0.4 (2011-04-05)
 ------------------
 
