--- a/rer/groupware/workflow/i18n/Ploneboard-plone-it.po
+++ b/rer/groupware/workflow/i18n/Ploneboard-plone-it.po
@@ -23,3 +23,9 @@ msgstr "Forum libero"
 
 msgid "Forum moderated"
 msgstr "Forum moderato"
+
+msgid "Make free for all"
+msgstr "Rendi libero"
+
+msgid "Make moderated"
+msgstr "Rendi moderato"
