--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,10 +1,10 @@
 Changelog
 =========
 
-1.1.1 (unreleased)
+1.1.1 (2012-10-03)
 ------------------
 
-- Nothing changed yet.
+- Fixed forum workflow translations [andrea]
 
 
 1.1.0 (2012-10-02)
