--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,10 +1,12 @@
 Changelog
 =========
 
-1.1.2 (unreleased)
+2.0.0 (unreleased)
 ------------------
 
-- Nothing changed yet.
+Plone 4 version
+
+- support for z3c.autoinclude [keul]
 
 
 1.1.1 (2012-10-03)
